# edge_impulse_plugin

./: .env  .env.example  .gitignore  README.md  main.py  pyproject.toml
app/: config.py  factory.py  main.py
app/api/: __init__.py  converter_routes.py  ingestion_routes.py  storage_routes.py
app/core/: __init__.py  dependencies.py  lifespan.py
app/models/: __init__.py  api_request.py  api_response.py  edge_impulse.py
app/services/: __init__.py  converter.py  storage.py
common/: config.py
common/models/: WEDA.py  __init__.py  edge_impulse.py  upload_request.py
logs/: __init__.py  utils.py
worker/: celery_app.py
worker/tasks/: ei_task.py
