[project]
name = "edge-impulse-plugin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.2",
    "boto3>=1.40.55",
    "cbor2>=5.7.0",
    "celery>=5.5.3",
    "dotenv>=0.9.9",
    "fastapi>=0.119.0",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
]
